--- a/src/components/counter.css
+++ b/src/components/counter.css
@@ -37,7 +37,7 @@
     border-radius: 14px;
     display: flex;
     padding: 0px 20px;
-    gap: 10px;
+    gap: 5px;
 }
 
 .number > img{
@@ -50,7 +50,7 @@ input{
     background: #FFFFFF;
     border: 2px solid #F0F0F1;
     border-radius: 7px;
-    margin: auto;
+    margin: auto 2px;
     padding-left: 10px;
     display: flex;
     align-items: center;
