--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,187 +1,193 @@
-body{
-    background: linear-gradient(180deg, rgba(3,3,3,1) 0%, rgba(15,15,15,1) 77%);
+body {
+  background: linear-gradient(
+    180deg,
+    rgba(3, 3, 3, 1) 0%,
+    rgba(15, 15, 15, 1) 77%
+  );
+  height: 100vh;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #141517;
+  position: relative;
+}
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 95vh;
+  gap: 2rem;
+  padding: 0 3rem;
+  margin-top: 4rem;
+}
+
+.left {
+  width: 55%;
+  position: relative;
+}
+
+.left > img {
+  position: absolute;
+  left: 286px;
+  top: 160px;
+  width: 8%;
+}
+
+.left > h2 {
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 75px;
+  letter-spacing: -0.03em;
+  color: white;
+  width: 85%;
+}
+
+button:active {
+  transform: scale(0.9);
+}
+
+.left > button {
+  padding: 15px 25px;
+  color: #141517;
+  background-color: #fff;
+  margin-top: 7%;
+  border-radius: 7px;
+  border: none;
+  outline: none;
+  font-weight: 600;
+  font-size: 17px;
+  cursor: pointer;
+}
+.right {
+  width: 45%;
+}
+
+.caption {
+  position: relative;
+  width: 392px;
+  height: 97px;
+  background: #141517;
+  border-radius: 14px;
+  margin-bottom: 15px;
+  padding: 15px 25px;
+}
+
+.caption > img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.caption > p {
+  color: white;
+  font-weight: 600;
+  font-size: 21px;
+  line-height: 29px;
+  width: 80%;
+}
+
+.footer {
+  background: #111111;
+  position: absolute;
+  bottom: -35px;
+  width: 100%;
+  height: 6vh;
+  padding: 10px 50px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+
+.footer > p {
+  font-size: 13px;
+}
+
+@media all and (max-width: 980px) {
+  .hero {
+    display: flex;
+    flex-direction: column;
     height: 100vh;
-}  
-  
-  .container{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #141517;
-        position: relative;
-    }
+    margin-bottom: 10%;
+  }
 
-    .hero{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #141517;
-        height: 95vh;
-    }
+  .left {
+    width: 100%;
+    position: relative;
+    padding: 40px 55px;
+    margin-top: 30%;
+  }
 
-    .left{
-        width: 60%;
-        position: relative;
-    }
+  .left > img {
+    position: absolute;
+    left: 455px;
+    width: 80px;
+    top: 350px;
+  }
 
-    .left > img{
-        position: absolute;
-        left: 366px;
-        top: 205px;
-    }
+  .left > h2 {
+    font-size: 98px;
+    line-height: 110px;
+    width: 100%;
+    margin-top: 75px;
+  }
 
-    .left > h2{
-        font-weight: 700;
-        font-size: 90px;
-        line-height: 95px;
-        letter-spacing: -0.03em;
-        color: white;
-        width: 65%;
-    }
+  .right {
+    width: 100%;
+    padding: 30px 50px;
+    margin-bottom: 20%;
+  }
+}
 
-    button:active{
-        transform: scale(0.9);
-    }
+@media (max-width: 500px) {
+  .container {
+    height: 85vh;
+    width: 101vw;
+  }
 
-    .left > button{
-        padding: 15px 25px;
-        color: #141517;
-        background-color: #fff;
-        margin-top: 7%;
-        border-radius: 7px;
-        font-weight: 600;
-        font-size: 17px;
-        cursor: pointer;
-    }
-    .right{
-        width: 30%;
-    }
+  .hero {
+    width: 100%;
+    height: 85rem;
+  }
 
-    .caption{
-        position: relative;
-        width: 392px;
-        height: 97px;
-        background: #141517;
-        border-radius: 14px;
-        margin-bottom: 15px;
-        padding: 15px 25px;
-    }
+  .left {
+    width: 100%;
+    position: relative;
+    padding: 230px 0 0 0;
+  }
 
-    .caption > img{
-        position: absolute;
-        bottom: 0;
-        right: 0;
-    }
+  .left > img {
+    position: absolute;
+    left: 225px;
+    width: 45px;
+    top: 425px;
+  }
 
-    .caption > p{
-        color: white;
-        font-weight: 600;
-        font-size: 21px;
-        line-height: 29px;
-        width: 80%;
-    }
+  .left > h2 {
+    font-size: 2.99rem;
+    line-height: 60px;
+    width: 80%;
+    margin-left: 30px;
+  }
 
-    .footer{
-        background: #111111;
-        position: absolute;
-        bottom: -35px;
-        width: 100%;
-        height: 6vh;
-        padding: 10px 50px;
-        color: #fff;
-        display: flex;
-        align-items: center;
-    }
+  .left > button {
+    margin-left: 35px;
+  }
 
-    .footer > p{
-        font-size: 13px;
-    }
+  .right {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-    @media all and (max-width: 980px) {
-
-        .hero{
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            margin-bottom: 10%;
-        }
-    
-        .left{
-            width: 100%;
-            position: relative;
-            padding: 40px 55px;
-            margin-top: 30%;
-        }
-        
-        .left > img{
-            position: absolute;
-            left: 455px;
-            width: 80px;
-            top: 350px;
-        }
-        
-        .left > h2{
-            font-size: 98px;
-            line-height: 110px;
-            width: 100%;
-            margin-top: 75px;
-        }
-    
-        .right{
-            width: 100%;
-            padding: 30px 50px;
-            margin-bottom: 20%;
-        }
-    
-    } 
-    
-    @media (max-width:500px){ 
-    
-        .container {
-            height: 85vh;
-            width: 101vw;
-        }
-        
-        .hero{
-            width: 100%;
-            height: 85rem;
-        }
-    
-        .left{
-            width: 100%;
-            position: relative;
-            padding: 230px 0 0 0;
-        }
-        
-        .left > img{
-            position: absolute;
-            left: 225px;
-            width: 45px;
-            top: 425px;
-        }
-        
-        .left > h2{
-            font-size: 2.99rem;
-            line-height: 60px;
-            width: 80%;
-            margin-left: 30px;
-        }
-
-        .left > button {
-            margin-left: 35px;
-        }
-    
-        .right{
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    
-        .footer{
-            bottom: -300px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    }
+  .footer {
+    bottom: -300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
